# Todo-Evolution

./: .gitignore  AGENTS.md  README.md
.spec-kit/: config.yaml
backend/: .env.example  Dockerfile  auth.py  db.py  events.py  main.py  models.py  pyproject.toml
backend/routes/: chat.py  subscriptions.py  tasks.py
dapr/: kafka.yaml
dapr/components/: pubsub.yaml  statestore.yaml
frontend/: Dockerfile  migrate.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/[...all]/: route.ts
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/tasks/: route.ts
frontend/src/app/api/tasks/[taskId]/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: auth-client.ts  auth.ts
helm/todo-evolution/: Chart.yaml  values.yaml
helm/todo-evolution/templates/: backend.yaml  frontend.yaml
phase1/: CLAUDE.md  README.md  pyproject.toml
phase1/src/: __init__.py  cli.py  main.py  models.py  storage.py
specs/: overview.md
specs/database/: schema.md
specs/features/: authentication.md  task-crud.md
