[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "groq>=1.1.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.42.0",
]
